--- a/server/static/style.css
+++ b/server/static/style.css
@@ -173,6 +173,18 @@ Do this by hiding all normal code. */
 }
 
 
+/** Controls boxes styling */
+.controls {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  border: 1px solid blue;
+}
+
+#controls-total-diff {
+  border: 5px solid yellow;
+}
+
 /* syntax highlighting with Eclipse colors */
 .hljs,
 .hljs-subst { color: #333; }
