--- a/server/views/dashboard/collab.pug
+++ b/server/views/dashboard/collab.pug
@@ -35,6 +35,11 @@ block content
               input(type='radio' name='score')
               | &nbsp;#[span.glyphicon.glyphicon-ok]+
           .col-xs-1: p#grader.form-control-static: i no grader
+
+  if visual == 1
+    #controls-total-diff.controls
+      THIS IS A CONTROL BOX
+
   
   #files.row
   
