--- a/server/views/dashboard/collab.pug
+++ b/server/views/dashboard/collab.pug
@@ -46,7 +46,7 @@ block content
             input#deleted(type='checkbox')
       .form-group
         .row
-          label.col-xs-9 half-width lines 
+          label.col-xs-9 half-width files 
           .col-xs-3
             input#cb-half-width(type='checkbox')
 
