Add event handlers for checkboxes

--- a/server/views/dashboard/collab.pug
+++ b/server/views/dashboard/collab.pug
@@ -43,7 +43,7 @@ block content
         .row
           label.col-xs-9 deleted code
           .col-xs-3 
-            input#deleted(type='checkbox')
+            input#cb-deleted-code(type='checkbox')
       .form-group
         .row
           label.col-xs-9 half-width files 
