Functionality for half width checkbox: changes width on click

--- a/server/views/dashboard/collab.pug
+++ b/server/views/dashboard/collab.pug
@@ -54,7 +54,7 @@ block content
   #files.row
   
   template#file
-    .col-xs-12: .tile.panel.panel-default: .panel-body
+    .file-column.col-xs-6: .tile.panel.panel-default: .panel-body
       h4
       pre.diff: code.java
   
