Default half width checkbox to be checked

--- a/server/views/dashboard/collab.pug
+++ b/server/views/dashboard/collab.pug
@@ -48,7 +48,7 @@ block content
         .row
           label.col-xs-9 half-width files 
           .col-xs-3
-            input#cb-half-width(type='checkbox')
+            input#cb-half-width(type='checkbox' checked)
 
   
   #files.row
