--- a/server/static/style.css
+++ b/server/static/style.css
@@ -7,7 +7,7 @@ body {
 #user {
   position: absolute;
   top: 10px;
-  right: 10px;
+  left: 10px;
 }
 #user.staff {
   background-color: #6f5499;
@@ -170,6 +170,21 @@ Do this by hiding all normal code. */
 .div-deleted :not(.span-removed) {
   background: rgba(0, 0, 0, 0);
   color: rgba(0, 0, 0, 0);
+}
+
+/** Controls boxes styling */
+.controls {
+  position: fixed;
+  top: 1em;
+  right: 2em;
+  border: 1px solid blue;
+  width: 15%;
+  z-index: 1000;
+  background: white;
+}
+
+#controls-regex {
+  border: 3px solid green;
 }
 
 
