--- a/server/views/dashboard/collab.pug
+++ b/server/views/dashboard/collab.pug
@@ -36,6 +36,21 @@ block content
               | &nbsp;#[span.glyphicon.glyphicon-ok]+
           .col-xs-1: p#grader.form-control-static: i no grader
   
+  if visual == 2
+    #controls-regex.controls.row
+
+      .form-group 
+        .row
+          label.col-xs-9 @Override
+          .col-xs-3 
+            input#cb-deleted-code(type='checkbox')
+      .form-group
+        .row
+          label.col-xs-9 public void 
+          .col-xs-3
+            input#cb-half-width(type='checkbox' checked)
+
+
   #files.row
   
   template#file
