Display control box even when actually applying regexes

--- a/server/views/dashboard/collab.pug
+++ b/server/views/dashboard/collab.pug
@@ -36,7 +36,7 @@ block content
               | &nbsp;#[span.glyphicon.glyphicon-ok]+
           .col-xs-1: p#grader.form-control-static: i no grader
   
-  if visual == 2
+  if visual[0] == 2
     #controls-regex.controls.row
 
       .form-group 
