--- a/server/static/style.css
+++ b/server/static/style.css
@@ -185,8 +185,16 @@ Do this by hiding all normal code. */
 
 #controls-regex {
   border: 3px solid green;
+  width: 25%;
 }
 
+#new-regex {
+  width: 100%;
+}
+
+#add-regex {
+  border: 2px solid blue;
+}
 
 /* syntax highlighting with Eclipse colors */
 .hljs,
