--- a/server/views/dashboard/collab.pug
+++ b/server/views/dashboard/collab.pug
@@ -48,7 +48,7 @@ block content
   #files.row
   
   template#file
-    .col-xs-12: .tile.panel.panel-default: .panel-body
+    .col-xs-12: .tile.panel.panel-default.file: .panel-body
       h4
       pre.diff: code.java
   
