--- a/server/views/dashboard/collab.pug
+++ b/server/views/dashboard/collab.pug
@@ -37,12 +37,13 @@ block content
           .col-xs-1: p#grader.form-control-static: i no grader
   
   if visual[0] == 2
-    #controls-regex.controls.row
+    #controls-regex.controls.col-xs-12
+      .row: .col-xs-12: h5 Pattern Matches
       #add-regex-row.row
         .col-xs-9
-          input#new-regex-text(type='text')
+          input#new-regex-text.form-control(type='text')
         .col-xs-3
-          #add-regex.btn &nbsp;#[span.glyphicon.glyphicon-plus]&nbsp
+          #add-regex #[span.glyphicon.glyphicon-plus.add-regex-btn]
 
 
   #files.row
