Zooming out leads to same margin sizes, so file width increases

--- a/server/static/style.css
+++ b/server/static/style.css
@@ -4,6 +4,12 @@ body {
   font-family: 'Rubik', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
+.container {
+  width: auto;
+  padding-left: 30px;
+  padding-right: 30px;
+}
+
 #user {
   position: absolute;
   top: 10px;
