Consolidate controls box styling

--- a/server/views/dashboard/collab.pug
+++ b/server/views/dashboard/collab.pug
@@ -42,7 +42,7 @@ block content
     https://github.com/pugjs/pug/issues/1422
 
   if visual[0] == 1 || visual[0] == 2 || visual[0] == 3
-    | <div id="visual-controls" class="controls col-xs-12">
+    | <div id="visual-controls" class="col-xs-12">
 
   if visual[0] == 1 || visual[0] == 3
       .row
