--- a/server/static/style.css
+++ b/server/static/style.css
@@ -11,10 +11,9 @@ body {
 }
 
 #user {
-  position: absolute;
-  top: 10px;
-  left: 10px;
+  margin-top: 10px;
 }
+
 #user.staff {
   background-color: #6f5499;
 }
