Add controls box for hide common prefix (visual 4)

--- a/server/views/dashboard/collab.pug
+++ b/server/views/dashboard/collab.pug
@@ -42,10 +42,10 @@ block content
     https://github.com/pugjs/pug/issues/1422
 
   if visual
-    if visual[0] == 1 || visual[0] == 2 || visual[0] == 3
+    if visual[0] == 1 || visual[0] == 2 || visual[0] == 3 || visual[0] == 4
       | <div id="visual-controls" class="col-xs-12">
 
-    if visual[0] == 1 || visual[0] == 3
+    if visual[0] == 1 || visual[0] == 3 || visual[0] == 4
         .row
           .col-xs-2
             input#cb-deleted-code(type='checkbox')
