De-duplicate code that determines update function and parameters based on the requested visual

--- a/server/views/dashboard/collab.pug
+++ b/server/views/dashboard/collab.pug
@@ -41,7 +41,7 @@ block content
     So, need to output HTML
     https://github.com/pugjs/pug/issues/1422
 
-  if visual
+  if visual && visual[0] <= 5
     if visual[0] == 1 || visual[0] == 2 || visual[0] == 3 || visual[0] == 4 || visual[0] == 5
       | <div id="visual-controls" class="col-xs-12">
 
