--- a/server/views/dashboard/collab.pug
+++ b/server/views/dashboard/collab.pug
@@ -41,17 +41,16 @@ block content
     So, need to output HTML
     https://github.com/pugjs/pug/issues/1422
 
-  if visual && visual[0] <= 5
-    if visual[0] == 1 || visual[0] == 2 || visual[0] == 3 || visual[0] == 4 || visual[0] == 5
-      | <div id="visual-controls" class="col-xs-12">
+  if deletedCode || regexes
+    | <div id="visual-controls" class="col-xs-12">
 
-    if visual[0] == 1 || visual[0] == 3 || visual[0] == 4 || visual[0] == 5
+    if deletedCode
         .row
           .col-xs-2
             input#cb-deleted-code(type='checkbox')
           p.col-xs-10 deleted code
     
-    if visual[0] == 2 || visual[0] == 3 || visual[0] == 5
+    if regexes
         .row: .col-xs-12: h5 Pattern Matches
         #add-regex-row.row
           .col-xs-2
@@ -74,7 +73,9 @@ block content
     var collabid = !{JSON.stringify(collabid)};
     var milestone = !{JSON.stringify(milestone || false)};
     var cutoff = !{JSON.stringify(cutoff || false)};
-    var visual = !{JSON.stringify(visual || false)};
+    var deletedCode = !{JSON.stringify(deletedCode || false)};
+    var regexes = !{JSON.stringify(regexes || false)};
+    var hideCommonPrefix = !{JSON.stringify(hideCommonPrefix || false)};
   script(src='/public/sharedb.js')
   script(src='/public/moment.js')
   script(src='/public/diff.js')
